Errors
<kernel>:1495:1: warning: control may reach end of non-void function
}
^
<kernel>:1533:1: warning: control may reach end of non-void function
}
^
<kernel>:2209:1: warning: control may reach end of non-void function
}
^
<kernel>:2262:1: warning: control may reach end of non-void function
}
^
<kernel>:2275:1: warning: control may reach end of non-void function
}
^
<kernel>:2361:1: warning: control reaches end of non-void function
}
^
<kernel>:2609:1: warning: control reaches end of non-void function
}
^
<kernel>:2689:1: warning: control may reach end of non-void function
}
^
<kernel>:2991:1: warning: control reaches end of non-void function
}
^
<kernel>:4063:46: error: expected ')'
                                                                                                sampler_manager,  options, seed));
                                                                                                                                 ^
<kernel>:4060:21: note: to match this '('
                        color = color_sum(color,
                                         ^

